[gd_scene load_steps=2 format=3 uid="uid://cnkk5kjsmpw05"]

[ext_resource type="Script" path="res://addons/virtualcamera/VCameras/PreviewPlugin/VCameraPreviewPlugin.gd" id="1"]

[node name="VCamera Preview" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AspectOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
item_count = 5
selected = 0
popup/item_0/text = "16:9 Standard HD"
popup/item_0/id = 0
popup/item_1/text = "4:3 Standard SD"
popup/item_1/id = 1
popup/item_2/text = "9:16 Standard Portrait"
popup/item_2/id = 2
popup/item_3/text = "16:9 Split Vertical"
popup/item_3/id = 3
popup/item_4/text = "16:9 Split Horizontal"
popup/item_4/id = 4

[node name="KeepOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
item_count = 2
selected = 1
popup/item_0/text = "FOV: Keep Width"
popup/item_0/id = 0
popup/item_1/text = "FOV: Keep Height"
popup/item_1/id = 1

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "X"

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ratio = 1.7778

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/AspectRatioContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/AspectRatioContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1089, 613)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="VBoxContainer/AspectRatioContainer/SubViewportContainer/SubViewport"]

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/AspectOptionButton" to="." method="_on_AspectOptionButton_item_selected"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/KeepOptionButton" to="." method="_on_KeepOptionButton_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
